--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">ArtApp</string>
-    <string name="hint_challenge">Challenge...</string>
+    <string name="hint_name">Name</string>
+    <string name="hint_description">Description</string>
     <string name="button_save">Save</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="button_addprompts">Prompts...</string>
     <string name="empty_not_saved">Challenge not saved because it is empty.</string>
     <string name="add_word">Add challenge</string>
+    <string name="placeholder">Placeholder text</string>
 </resources>
