Set prompts as done and challenge progress bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="empty_not_saved">Challenge not saved because it is empty.</string>
     <string name="add_word">Add challenge</string>
     <string name="placeholder">Placeholder text</string>
+    <string name="placeholder_numbers">10/10</string>
     <string name="dialog_import_title">Import</string>
     <string name="dialog_import_positive">Import</string>
     <string name="dialog_import_negative">Cancel</string>
